# AI-Scientist-OS

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dev.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run_worker.py  setup_ollama.py  tsconfig.tsbuildinfo
