[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scientist-os-backend"
version = "0.1.0"
description = "Backend for AI Scientist OS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.2",
  "asyncpg>=0.30.0",
  "beautifulsoup4>=4.13.3",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "lxml>=5.4.0",
  "openai>=1.76.0",
  "orjson>=3.10.16",
  "pandas>=2.2.3",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.2.6",
  "pydantic-settings>=2.8.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "reportlab>=4.4.1",
  "rq>=2.2.0",
  "sqlalchemy>=2.0.40",
  "structlog>=25.2.0",
  "tenacity>=9.1.2",
  "trafilatura>=2.0.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.8.0",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
exclude = ["app/tests"]
ignore_missing_imports = true
warn_return_any = false
disallow_any_generics = false
